2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Don't make bidi-paragraph-direction
	bound globally in old Emacsen and XEmacsen.

2012-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-get-unread-articles): Clear out "early" methods
	so that previous errors don't prohibit getting new news.

	* nnimap.el (nnimap-retrieve-group-data-early): Ditto.

	* nntp.el (nntp-retrieve-group-data-early): Ditto.

2012-01-26  Nick Alcock  <nick.alcock@oracle.com>  (tiny change)

	* gnus.el (gnus-group-find-parameter): Check for liveness of the
	buffer, not of the string which is its name.

2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* proto-stream.el (proto-stream-capability-open): Wait for
	:end-of-capability, not :end-of-command.

	* gnus-sum.el (gnus-summary-move-article): Don't propagate marks to
	non-server-marks groups.
	(gnus-group-make-articles-read): Ditto.

	* gnus-srvr.el (gnus-server-prepare): Use it to avoid showing ephemeral
	methods (bug#9676).

	* gnus.el (gnus-method-ephemeral-p): New function.

2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-mode): Force paragraph direction to be
	left-to-right.

2012-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnir-search-thread): Autoload to avoid a compilation
	warning.

2012-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-line-format-alist): Don't try to
	macroexpand the nnir things, since they haven't been defined yet, and
	nnir requires gnus-sum.

2012-01-24  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsl): Fix value computing.
	(color-hue-to-rgb): New function.
	(color-hsl-to-rgb): New function.
	(color-clamp, color-saturate-hsl, color-saturate-name)
	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
	(color-lighten-name, color-darken-hsl, color-darken-name): New function.

2012-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
