@@ -1,3 +1,8 @@
+2012-01-27  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* proto-stream.el (proto-stream-capability-open): Fall back on
+	:end-of-command if :end-of-capability doesn't exist.
+
 2012-01-26  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-sum.el (gnus-summary-mode): Don't make bidi-paragraph-direction
